[package]
name = "LBSProjectDiffPrimality"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.is_prime]
version = "2.0.7"

[dependencies.arbitrary]
version = "1.1.0"

[dependencies.urandom]
version = "0.1.0"